index er responsiv og færdigbagt

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,4 @@
 img/Rejsen til DR Congo 2024.mp4
-<<<<<<< HEAD
 .DS_store
 img/.DS_store
-=======
-.DS_Store
-img/.DS_Store
->>>>>>> main
+css/index2.css
